raffia/tests/error/scss/qualified-rule/missing-block.snap
---
source: raffia/tests/error.rs
---
error: expect token `{`, but `<eof>` received
  ┌─ missing-block.scss:2:1
  │
2 │ 
  │ ^


